..F....... [DEV-2060] fixed vertical align for sortable items

--- a/sass/stylesheets/sass/layout/_form-grid.scss
+++ b/sass/stylesheets/sass/layout/_form-grid.scss
@@ -190,7 +190,6 @@
 
 		.sortable td {
 			padding-bottom: 0;
-			vertical-align: middle;
 			line-height: 24px;
 
 			&.td-drag-icon {
