--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -1980,8 +1980,6 @@ select {
 
 	.table-forms-td-right {
 		td {
-			vertical-align: middle;
-
 			label {
 				display: block;
 			}
