--- a/ui/assets/styles/dark-theme.css
+++ b/ui/assets/styles/dark-theme.css
@@ -1131,7 +1131,6 @@ footer {
       width: auto; }
     .form-grid table .sortable td {
       padding-bottom: 0;
-      vertical-align: middle;
       line-height: 24px; }
       .form-grid table .sortable td.td-drag-icon {
         line-height: inherit; }
@@ -5388,10 +5387,8 @@ z-select button.focusable,
   .overlay-dialogue .table-paging {
     border: 0;
     border-top: 1px solid #383838; }
-  .overlay-dialogue .table-forms-td-right td {
-    vertical-align: middle; }
-    .overlay-dialogue .table-forms-td-right td label {
-      display: block; }
+  .overlay-dialogue .table-forms-td-right td label {
+    display: block; }
   .overlay-dialogue .maps-container {
     max-height: 128px;
     overflow-y: auto;
